--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:logo="@drawable/toolbar_logo"
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
-                android:background="#7eb5dc"
+                android:background="@color/mainActionBar"
                 android:orientation="horizontal">
 
                 <Button
@@ -78,7 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/linearLayout"
-                    android:background="#def5fc"
+                    android:background="#FFFFFF"
                     android:fadingEdge="horizontal|vertical"
                     tools:layout_editor_absoluteY="48dp" />
             </android.support.v4.widget.SwipeRefreshLayout>
