--- a/app/src/main/res/layout/item_comment_listitemnew.xml
+++ b/app/src/main/res/layout/item_comment_listitemnew.xml
@@ -5,7 +5,7 @@
     android:id="@+id/contentView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/comment_item_selector"
+    android:background="?attr/selectableItemBackground"
     android:orientation="vertical">
 
     <LinearLayout
