--- a/app/src/main/res/layout/activity_2_check_storeinfonew.xml
+++ b/app/src/main/res/layout/activity_2_check_storeinfonew.xml
@@ -382,12 +382,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
-                        android:background="#FFFFFF" />
+                        android:background="@color/list_item" />
 
                     <LinearLayout
                         android:id="@+id/sendCommentLayout"
                         android:layout_width="match_parent"
-                        android:layout_height="45dp"
+                        android:layout_height="40dp"
                         android:layout_weight="0"
                         android:background="@color/colorPrimary"
                         android:orientation="horizontal"
@@ -406,10 +406,10 @@
                             android:hint="對這個店家發表評論..."
                             android:inputType="text"
                             android:paddingBottom="0dp"
-                            android:paddingEnd="3dp"
+                            android:paddingEnd="10dp"
                             android:paddingLeft="0dp"
                             android:paddingRight="0dp"
-                            android:paddingStart="8dp"
+                            android:paddingStart="10dp"
                             android:paddingTop="0dp"
                             android:singleLine="false"
                             android:textColor="#59493f"
