--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0068b7</color>
-    <color name="colorPrimaryDark">#f00068b7</color>
-    <color name="colorAccent">#0068b7</color>
+    <color name="colorPrimary">#fc9c46</color>
+    <color name="colorPrimaryDark">#f0fc9c46</color>
+    <color name="colorAccent">#fc9c46</color>
     <color name="white">#ffffff</color>
     <color name="drawerFont">#81511c</color>
     <color name="list_item">#f9eed8</color>
     <color name="list_pressed">#ffda8b</color>
-    <color name="checkopponenttoolbar">#0068b7</color>
-    <color name="mainActionBar">#051d35</color>
-    <color name="infoRowBackground">#00b7ee</color>
+    <color name="checkopponenttoolbar">#3399cc</color>
+    <color name="mainActionBar">#fcb960</color>
+    <color name="infoRowBackground">#f5c59a</color>
 </resources>
