--- a/app/src/main/res/layout/alertdialog_edit_meal.xml
+++ b/app/src/main/res/layout/alertdialog_edit_meal.xml
@@ -6,14 +6,6 @@
     android:orientation="vertical">
 
 
-    <Spinner
-        android:id="@+id/addTypeSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp" />
-
     <TextView
         android:id="@+id/mealNameTextView"
         android:layout_width="wrap_content"
@@ -56,23 +48,37 @@
 
     <TextView
         android:id="@+id/sequenceTextView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="10dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:text="@string/addSequence"
-        android:textAlignment="viewStart"
+        android:text="位置"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
-    <Spinner
-        android:id="@+id/classSpinner"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginLeft="25dp"
-        android:layout_marginRight="10dp" />
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/upButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="上移" />
+
+        <Button
+            android:id="@+id/downButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="下移" />
+    </LinearLayout>
 
 
 </LinearLayout>
