--- a/app/src/main/res/layout/activity_check_order.xml
+++ b/app/src/main/res/layout/activity_check_order.xml
@@ -40,12 +40,35 @@
                 android:id="@+id/costTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_above="@+id/buttonLayout"
+                android:layout_alignParentBottom="false"
                 android:padding="5dp"
                 android:text="總共 0 元"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp" />
+
+            <LinearLayout
+                android:id="@+id/buttonLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/checkButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="確認訂單" />
+
+                <Button
+                    android:id="@+id/copyButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="複製訂單" />
+            </LinearLayout>
 
         </RelativeLayout>
 
