--- a/app/src/main/res/layout/appeal_item.xml
+++ b/app/src/main/res/layout/appeal_item.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/orderRelativeLayout"
+    android:id="@+id/appealRelativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#f9eed8">
 
     <TextView
-        android:id="@+id/storeTextView"
+        android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="15dp"
         android:paddingTop="10dp"
-        android:text="店家"
-        android:textColor="@android:color/black"
+        android:text="標題"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/dateTextView"
+        android:id="@+id/subtitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/storeTextView"
+        android:layout_below="@+id/titleTextView"
         android:paddingBottom="10dp"
         android:paddingLeft="15dp"
         android:paddingTop="5dp"
-        android:text="日期"
-        android:textColor="@android:color/black" />
+        android:text="內容" />
 
     <TextView
         android:id="@+id/stateTextView"
@@ -33,7 +32,6 @@
         android:layout_alignParentRight="true"
         android:paddingRight="15dp"
         android:paddingTop="10dp"
-        android:text="金額"
-        android:textColor="@android:color/black"
+        android:text="狀態"
         android:textSize="18sp" />
 </RelativeLayout>
