--- a/app/src/main/res/menu/toolbar_add.xml
+++ b/app/src/main/res/menu/toolbar_add.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/deleteItem"
-        android:icon="@drawable/ic_delete"
-        android:title="刪除"
+        android:id="@+id/addItem"
+        android:icon="@drawable/ic_add"
+        android:title="@string/map"
         app:showAsAction="ifRoom"></item>
 </menu>
