--- a/app/src/main/res/layout/activity_edit_store.xml
+++ b/app/src/main/res/layout/activity_edit_store.xml
@@ -348,7 +348,34 @@
                             android:textColor="#59493f" />
 
                     </TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
+                        <TextView
+                            android:id="@+id/weekTextView"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="每週營業"
+                            android:textColor="#FFFFFF"
+                            android:textSize="@dimen/font_size" />
+
+                        <EditText
+                            android:id="@+id/weekEditText"
+                            android:layout_width="0dp"
+                            android:layout_height="29dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_weight="3"
+                            android:background="@drawable/text_background"
+                            android:ems="10"
+                            android:inputType="phone"
+                            android:paddingEnd="10dp"
+                            android:paddingStart="10dp"
+                            android:textColor="#59493f" />
+                    </TableRow>
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
