--- a/app/src/main/res/layout/activity_2_check_storeinfo_viewpager_item.xml
+++ b/app/src/main/res/layout/activity_2_check_storeinfo_viewpager_item.xml
@@ -35,7 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-smallcaps"
-        android:text="主相片"
+        android:text="相片標籤"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
