--- a/app/src/main/res/layout/alertdialog_sort.xml
+++ b/app/src/main/res/layout/alertdialog_sort.xml
@@ -73,5 +73,26 @@
             android:layout_height="wrap_content"
             android:layout_weight="2" />
     </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="25dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp">
 
+        <TextView
+            android:id="@+id/clickTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="點擊"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <Spinner
+            android:id="@+id/clickSpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2" />
+    </TableRow>
 </TableLayout>
