--- a/app/src/main/res/layout/alertdialog_order.xml
+++ b/app/src/main/res/layout/alertdialog_order.xml
@@ -16,7 +16,7 @@
         android:textSize="18sp" />
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
@@ -24,7 +24,7 @@
 
         <ImageView
             android:id="@+id/mealPhoto"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
